# macare

./: .replit  app.py  models.py  pyproject.toml  readme  replit.md  utils.py
attached_assets/: Pasted-I-have-built-a-full-scale-Streamlit-app-available-here-king-fu-panda-MatCare-https-github-c-1758548768841_1758548768842.txt
models/: model1.pkl  model2.pkl
